unpackaged/main/default/objects/datamask__Masking_Field__mdt/datamask__Masking_Field__mdt.object-meta.xml
<CustomObject>
    <label>Masking Field</label>
    <pluralLabel>Masking Fields</pluralLabel>
</CustomObject>