unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Active__c.field-meta.xml
<CustomField>
    <fullName>datamask__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>