unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Custom_Pattern__c.field-meta.xml
<CustomField>
    <fullName>datamask__Custom_Pattern__c</fullName>
    <label>Custom Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>