unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Date_Max__c.field-meta.xml
<CustomField>
    <fullName>datamask__Date_Max__c</fullName>
    <label>Date Max</label>
    <type>Date</type>
</CustomField>