unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Date_Min__c.field-meta.xml
<CustomField>
    <fullName>datamask__Date_Min__c</fullName>
    <label>Date Min</label>
    <type>Date</type>
</CustomField>