unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Field_Length__c.field-meta.xml
<CustomField>
    <fullName>datamask__Field_Length__c</fullName>
    <label>Field Length</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>