unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Field_Type__c.field-meta.xml
<CustomField>
    <fullName>datamask__Field_Type__c</fullName>
    <label>Field Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>