unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Masking_Category__c.field-meta.xml
<CustomField>
    <fullName>datamask__Masking_Category__c</fullName>
    <label>Masking Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>