unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Masking_Object__c.field-meta.xml
<CustomField>
    <fullName>datamask__Masking_Object__c</fullName>
    <label>Masking Object</label>
    <referenceTo>datamask__Masking_Object__mdt</referenceTo>
    <relationshipLabel>Masking Fields</relationshipLabel>
    <relationshipName>Masking_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>