unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Range_Max__c.field-meta.xml
<CustomField>
    <fullName>datamask__Range_Max__c</fullName>
    <label>Range Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>