unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Range_Min__c.field-meta.xml
<CustomField>
    <fullName>datamask__Range_Min__c</fullName>
    <label>Range Min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>