unpackaged/main/default/objects/datamask__Masking_Field__mdt/fields/datamask__Unique__c.field-meta.xml
<CustomField>
    <fullName>datamask__Unique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique</label>
    <type>Checkbox</type>
</CustomField>